+disambiguating information in person autocompletes,  +new entry page, +academic degree autocomplete

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -441,8 +441,9 @@ disambiguation.modalNewPersonCloseButton  = Close
 disambiguation.modalNewPersonContent      = This action will redirect you to a new page prefilled with the current name where you can create a new person.
 disambiguation.modalNewPersonHeader       = Add new person to thesis
 disambiguation.modalSearchPersonHeader    = Add other person to thesis
+disambiguation.newPerson                  = add a person with the name {0}
 disambiguation.newPersonButton            = New person
-disambiguation.noFound                    = No persons found for author name
+disambiguation.notFound                   = No persons found for author name {0}
 disambiguation.otherPersonButton          = Other person
 disambiguation.person                     = Person
 disambiguation.personsPanelHeader         = Persons with the name
@@ -1169,6 +1170,7 @@ navi.passReminder.button         = send
 navi.password                    = password
 navi.password.ldap               = pin code
 navi.pdfs                        = documents
+navi.persons                     = persons
 navi.place                       = place
 navi.popular                     = popular
 navi.postBookmark                = post bookmark
@@ -1298,7 +1300,7 @@ person.show.editRoleButton             = Edit roles
 person.show.firstReviewer              = First reviewer
 person.show.formFirstName              = First name
 person.show.formLastName               = Last name
-person.show.header                     = Person
+person.show.header                     = person entry
 person.show.modalAddNameHeader         = Add alternative name to person
 person.show.modalAddRoleHeader         = Add new role to thesis
 person.show.modalAddThesisHeader       = Add new thesis to person
@@ -1338,6 +1340,17 @@ personalized = personalized
 
 personalized.info     = Get a personalized view of this user's posts.
 personalized.tag.info = The following tags of {0} might be interesting for you:
+
+persons.intro.dataset.desc = Die Datenbank der {0} Personen
+persons.intro.dataset.text = Die {0} Personen Datenbank beinhaltet Autoren und Herausgeber wissenschaftlicher Publikationen sowie deren Beziehungen untereinander. Unter anderem umfasst alle Deutschen Dissertationsschriften seit 1945. Das Ziel der Datenbank ist eine m\u00F6glichst umfangreiche Erfassung aller Betreuungs- und Gutachter-Relationen zwischen Personen und Publikation. Dabei sind wir auf Ihre Hilfe angewiesen: Helfen Sie mit und erfassen Sie fehlende Doktorv\u00E4ter, Doktorm\u00FCtter und andere Relationen!
+persons.intro.headline     = {0} Persons
+persons.intro.intro        = Suchen Sie eine Person \u00FCber deren Name oder den Titel ihrer Dissertation. Sie erhalten dann Informationen zur Person und deren Publikationen und k\u00F6nnen durch den akademischen Stammbaum navigieren.
+persons.intro.navi.dataset = The Database
+persons.intro.navi.wiskidz = The Project
+persons.intro.title        = {0} Persons
+persons.intro.wiskidz      = 
+persons.intro.wiskidz.desc = Das Forschungsprojekt hinter den {0} Personen
+persons.intro.wiskidz.text = The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
 
 plain = plain
 
