--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -432,37 +432,38 @@ didyouknow.editYourProfile = Es ist einfacher f\u00FCr Ihre Kollegen Sie zu find
 didyouknow.isbn            = Um ein Buch, eine Zeitschrift oder ein Magazin in Ihrer Publikationsliste zu speichern, k\u00F6nnen Sie einfach die <a href="/postPublication?selTab=3#selTab3">ISBN, ISSN oder DOI nutzen</a>. Es wird automatisch nach den fehlenden Metadaten gesucht und diese in die Eingabeform \u00FCbertragen. Das spart Zeit und Nerven!
 didyouknow.scanningQr      = <p>Ihre Webcam kann die Barcodes Ihrer B\u00FCcher lesen!</p><p>Die Option 'Code scannen' auf der Seite 'Publikation eintragen' \u00F6ffnet dazu ein Plugin, das den Code scannt. Als Ergebnis bekommen Sie ein vorausgef\u00FClltes Formular mit allen verf\u00FCgbaren Metadaten zum Buch.</p><p>{0} kann zudem Ihren hochgeladenen Dokumenten QR-Codes hinzuf\u00FCgen. Diese werden an einem wei\u00DFen Fleck auf der ersten Seite des Dokuments eingef\u00FCgt. Wenn Sie das Dokument mit dem QR-Code drucken, k\u00F6nnen Sie genau dieses Dokument sp\u00E4ter durch Scannen des Dokuments leicht finden und zitieren.</p>
 
-disambiguation.addPersonButton            = Person hinzuf\u00FCgen
-disambiguation.close                      = Schlie\u00DFen
-disambiguation.fromPost                   = Aus dem Eintrag
-disambiguation.header                     = Disambiguierung
-disambiguation.linkJustShowPerson         = Nur Person anzeigen
-disambiguation.linkPersonButton           = Person hinzuf\u00FCgen 
-disambiguation.link.modal.msg             = Ihre Auswahl der zur Publikation geh\u00F6rigen Person kann im System gespeichert werden, sodas andere diese Auswahl nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Auswahl speichern?
-disambiguation.link.modal.title           = Helfen Sie mit Ihrer Auswahl unserer Nutzergemeinschaft
-disambiguation.link.modal.abortButton     = Abbrechen
-disambiguation.link.modal.saveButton      = Ja, Speichern
-disambiguation.link.modal.viewButton      = Nein, Person nur zeigen
-disambiguation.modalNewPersonCloseButton  = Schlie\u00DFen
-disambiguation.modalNewPersonContent      = Möchten Sie eine weitere Person mit dem aktuellen Namen anlegen?
-disambiguation.modalNewPersonHeader       = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
-disambiguation.modalSearchPersonHeader    = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
-disambiguation.noInfo                     = keine weiteren Infos
-disambiguation.otherPerson                = eine andere Person
-disambiguation.otherPerson.modal.title    = Eine andere Person ausw\u00E4hlen oder anlegen
-disambiguation.otherPerson.modal.msg      = Sie k\u00F6nnen eine Person unter einem anderen Namen (Alias oder fr\u00FCherer Name) suchen, oder eine neue differenzierte Person unter dem Namen "{0}" im System anlegen.
-disambiguation.otherPerson.modal.newPersonButton = Neue Person anlegen
+disambiguation.addPersonButton                      = Person hinzuf\u00FCgen
+disambiguation.close                                = Schlie\u00DFen
+disambiguation.fromPost                             = Aus dem Eintrag
+disambiguation.header                               = Disambiguierung
+disambiguation.link.modal.abortButton               = Abbrechen
+disambiguation.link.modal.msg                       = Ihre Auswahl der zur Publikation geh\u00F6rigen Person kann im System gespeichert werden, sodas andere diese Auswahl nicht erneut treffen m\u00FCssen. M\u00F6chten Sie Ihre Auswahl speichern?
+disambiguation.link.modal.saveButton                = Ja, Speichern
+disambiguation.link.modal.title                     = Helfen Sie mit Ihrer Auswahl unserer Nutzergemeinschaft
+disambiguation.link.modal.viewButton                = Nein, Person nur zeigen
+disambiguation.linkJustShowPerson                   = Nur Person anzeigen
+disambiguation.linkPersonButton                     = Person hinzuf\u00FCgen 
+disambiguation.listExplanation                      = Zur Unterscheidung von Personen mit gleichen Namen, werden, sofern im System hinterlegt, der akademische Grad der Person, sowie der Titel einer wichtigen Publikation (z.B. Doktorarbeit) angezeigt.
+disambiguation.modalNewPersonCloseButton            = Schlie\u00DFen
+disambiguation.modalNewPersonContent                = M\u00C3\u00B6chten Sie eine weitere Person mit dem aktuellen Namen anlegen?
+disambiguation.modalNewPersonHeader                 = Neue Person zur Abschlussarbeit hinzuf\u00FCgen
+disambiguation.modalSearchPersonHeader              = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
+disambiguation.newPerson                            = eine Person mit dem Namen {0} hinzuf\u00FCgen
+disambiguation.noInfo                               = keine weiteren Infos
+disambiguation.notFound                             = Keine Personen zu dem Authornamen {0} gefunden
+disambiguation.otherPerson                          = eine andere Person
+disambiguation.otherPerson.modal.abortButton        = Abbrechen
+disambiguation.otherPerson.modal.msg                = Sie k\u00F6nnen eine Person unter einem anderen Namen (Alias oder fr\u00FCherer Name) suchen, oder eine neue differenzierte Person unter dem Namen "{0}" im System anlegen.
+disambiguation.otherPerson.modal.newPersonButton    = Neue Person anlegen
 disambiguation.otherPerson.modal.search.placeholder = Person suchen...
 disambiguation.otherPerson.modal.selectPersonButton = Person ausw\u00E4hlen
-disambiguation.otherPerson.modal.abortButton = Abbrechen
-disambiguation.noFound                    = Keine Personen zu dem Authornamen gefunden
-disambiguation.otherPersonButton          = Andere Person
-disambiguation.person                     = Person
-disambiguation.personsPanelHeader         = Personen mit dem Namen
-disambiguation.pleaseChooseMsg            = Bitte w\u00E4hlen Sie die zum Eintrag geh\u00F6rige Person namens "{0}":
-disambiguation.listExplanation            = Zur Unterscheidung von Personen mit gleichen Namen, werden, sofern im System hinterlegt, der akademische Grad der Person, sowie der Titel einer wichtigen Publikation (z.B. Doktorarbeit) angezeigt.
-disambiguation.postPanelHeader            = Betreffenden Post
-disambiguation.searchPersonButton         = Nach anderen Namen suchen
+disambiguation.otherPerson.modal.title              = Eine andere Person ausw\u00E4hlen oder anlegen
+disambiguation.otherPersonButton                    = Andere Person
+disambiguation.person                               = Person
+disambiguation.personsPanelHeader                   = Personen mit dem Namen
+disambiguation.pleaseChooseMsg                      = Bitte w\u00E4hlen Sie die zum Eintrag geh\u00F6rige Person namens "{0}":
+disambiguation.postPanelHeader                      = Betreffenden Post
+disambiguation.searchPersonButton                   = Nach anderen Namen suchen
 
 discussion.bookmarkReferences = Bookmarks
 discussion.byGroup            = Zeige k\u00FCrzlich diskutierte Eintr\u00E4ge von {0}
@@ -1186,6 +1187,7 @@ navi.passReminder.button         = Senden
 navi.password                    = Passwort
 navi.password.ldap               = PIN-Code
 navi.pdfs                        = Dokumente
+navi.persons                     = Personen
 navi.place                       = Ort
 navi.popular                     = Beliebt
 navi.postBookmark                = Lesezeichen eintragen
@@ -1316,7 +1318,7 @@ person.show.editRoleButton             = Rollen \u00E4ndern
 person.show.firstReviewer              = Erstgutachter
 person.show.formFirstName              = Vorname
 person.show.formLastName               = Nachname
-person.show.header                     = Person
+person.show.header                     = Personeneintrag
 person.show.modalAddNameHeader         = Alternative Name zur Person hinzuf\u00FCgen
 person.show.modalAddRoleHeader         = Neue Rolle hinzuf\u00FCgen
 person.show.modalAddThesisHeader       = Neue Abschlussarbeit zur Person hinzuf\u00FCgen
@@ -1355,6 +1357,16 @@ personalized = personalisiert
 
 personalized.info     = Schauen Sie sich die Eintr\u00E4ge dieses Benutzers in einer personalisierten Sicht an.
 personalized.tag.info = Die folgenden Tags von {0} k\u00F6nnten Sie interessieren:
+
+persons.intro.dataset.desc = Die Datenbank der {0} Personen
+persons.intro.dataset.text = Die {0} Personen Datenbank beinhaltet Autoren und Herausgeber wissenschaftlicher Publikationen sowie deren Beziehungen untereinander. Unter anderem umfasst alle Deutschen Dissertationsschriften seit 1945. Das Ziel der Datenbank ist eine m\u00F6glichst umfangreiche Erfassung aller Betreuungs- und Gutachter-Relationen zwischen Personen und Publikation. Dabei sind wir auf Ihre Hilfe angewiesen: Helfen Sie mit und erfassen Sie fehlende Doktorv\u00E4ter, Doktorm\u00FCtter und andere Relationen!
+persons.intro.headline     = {0} Personen
+persons.intro.intro        = Suchen Sie eine Person \u00FCber deren Name oder den Titel ihrer Dissertation. Sie erhalten dann Informationen zur Person und deren Publikationen und k\u00F6nnen durch den akademischen Stammbaum navigieren.
+persons.intro.navi.dataset = Die Datenbank
+persons.intro.navi.wiskidz = Das Projekt
+persons.intro.title        = {0} Personen
+persons.intro.wiskidz.desc = Das Forschungsprojekt hinter den {0} Personen
+persons.intro.wiskidz.text = The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
 
 plain = einfach
 
