adapted the result in the IucrScraperUnitURLTest to work correctly with the new changes in the website

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IucrScraperUnitURLTest.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/IucrScraperUnitURLTest.bib
@@ -10,5 +10,5 @@ month = "Jun",
 doi = {10.1107/S0108768108005119},
 url = {http://dx.doi.org/10.1107/S0108768108005119},
 abstract = {In the Er{--}Ge system, the compostion range ErGe${\sb 2}$ to Er${\sb 2}$Ge${\sb 3}$ has been investigated. Eight samples were produced by arc melting of the elements, and analyzed using X-ray powder diffraction. Nine crystal structures were found to be present in the samples. The structures are described as a homologous series and presented within the superspace formalism using the superspace group {\it X}2/{\it m}({$\alpha$}0{$\gamma$})0{\it s}, {\it X} representing the centring vector ({$\scriptstyle{1\over2}$}, {$\scriptstyle{1\over2}$}, 0, {$\scriptstyle{1\over2}$}). In this description the modulation vector {\bf q} = ({$\alpha$}{\bf a}* + {$\gamma$}{\bf c}*) is shown to be a direct measure of the Ge content as ErGe${\sb 2{$-$}{$\alpha$}}$ ({$\alpha$} falls in the range 1\over 3 to {$\scriptstyle{1\over2}$}). The large composition range is achieved by extended vacancy ordering in the planar 6${\sp 3}$ net of Ge with subsequent relaxation.},
-keywords={modulation, rare-earth germanides, vacancy ordering}
+keywords = {modulation, rare-earth germanides, vacancy ordering},
 }
