--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -920,6 +920,7 @@ joinGroup.already.member.error     = You already are a member of this group.
 joinGroup.already.request.error    = You have already sent a group join request.
 joinGroup.deny.noUser              = The user you try to deny access does not exist.
 joinGroup.info                     = To join a group you must send a request to the group admin.
+joinGroup.joinRequestDisabled      = The group does not allow sending join requests.
 joinGroup.reason                   = reason
 joinGroup.reason.hint              = Give a short motivation of why you want to join this group.
 joinGroup.reason.hint.appendix     = ({0} characters)
