the formatting is changed already related to the scraper

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AmazonScraperUnitURLTest1.bib
@@ -1,6 +1,6 @@
 @electronic{noauthororeditor2004semantic,
 address = {Cambridge, Mass.},
-isbn = {9780262267205 0262267209},
+isbn = {9780262267205 0262267209 1417560770 9781417560776},
 publisher = {MIT Press},
 refid = {57141643},
 title = {A semantic Web primer},
