--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest2.bib
@@ -4,7 +4,7 @@
 
 
 @article{doi:10.1089/teb.2007.0150,
-author = {Lee, Jungwoo and Cuddihy, Meghan J. and Kotov, Nicholas A.},
+author = { Jungwoo   Lee  and  Meghan J.   Cuddihy  and  Nicholas A.   Kotov },
 title = {Three-Dimensional Cell Culture Matrices: State of the Art},
 journal = {Tissue Engineering Part B: Reviews},
 volume = {14},
