--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/MorganClaypoolScraperUnitURLTest1.bib
@@ -4,7 +4,7 @@
 
 
 @article{doi:10.2200/S00334ED1V01Y201102WBE001,
-author = {Heath, Tom and Bizer, Christian},
+author = { Tom Heath and  Christian Bizer},
 title = {Linked Data: Evolving the Web into a Global Data Space},
 journal = {Synthesis Lectures on the Semantic Web: Theory and Technology},
 volume = {1},
