--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest3.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/LiebertScraperUnitURLTest3.bib
@@ -4,7 +4,7 @@
 
 
 @article{doi:10.1089/152308604773934350,
-author = {Kutala, Vijay Kumar and Parinandi, Narasimham L. and Pandian, Ramasamy P. and Kuppusamy, Periannan},
+author = { Vijay Kumar  Kutala  and  Narasimham L.  Parinandi  and  Ramasamy P.  Pandian  and  Periannan  Kuppusamy },
 title = {Simultaneous Measurement of Oxygenation in Intracellular and Extracellular Compartments of Lung Microvascular Endothelial Cells},
 journal = {Antioxidants \& Redox Signaling},
 volume = {6},
