--- a/bibsonomy-webapp/src/main/resources/old_layout_messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/old_layout_messages_de.properties
@@ -4,3 +4,4 @@ group.manage.header      = Gruppe administrieren
 group.manage.unsupported = Leider wird das Administrieren einer Gruppe nicht mehr im alten Layout unterst\u00FCtzt. Bitte wechseln Sie zum <a href="/bibsonomy3">neue Layout</a>.
 
 join.group.unsupported = Leider wird das Beitreten zu einer Gruppe nicht mehr im alten Layout unterst\u00FCtzt. Bitte wechseln Sie zum <a href="/bibsonomy3">neuen Layout</a>.
+batchedit.unsupported = Das Editieren von mehreren Einträgen zugleich wird nicht mehr im alten Layout unterst\u00FCtzt. Bitte wechseln Sie zum <a href="/bibsonomy3">neuen Layout</a>.
