->layout & text changes

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -450,7 +450,7 @@ disambiguation.modalNewPersonHeader                 = Neue Person zur Abschlussa
 disambiguation.modalSearchPersonHeader              = Andere Person zur Abschlussarbeit hinzuf\u00FCgen
 disambiguation.newPerson                            = eine Person mit dem Namen {0} hinzuf\u00FCgen
 disambiguation.noInfo                               = keine weiteren Infos
-disambiguation.notFound                             = Keine Personen zu dem Authornamen {0} gefunden
+disambiguation.notFound                             = Es wurden keine Personen mit dem Namen {0} gefunden
 disambiguation.otherPerson                          = eine andere Person
 disambiguation.otherPerson.modal.abortButton        = Abbrechen
 disambiguation.otherPerson.modal.msg                = Sie k\u00F6nnen eine Person unter einem anderen Namen (Alias oder fr\u00FCherer Name) suchen, oder eine neue differenzierte Person unter dem Namen "{0}" im System anlegen.
@@ -1187,7 +1187,7 @@ navi.passReminder.button         = Senden
 navi.password                    = Passwort
 navi.password.ldap               = PIN-Code
 navi.pdfs                        = Dokumente
-navi.persons                     = Personen
+navi.persons                     = Autoren
 navi.place                       = Ort
 navi.popular                     = Beliebt
 navi.postBookmark                = Lesezeichen eintragen
@@ -1358,15 +1358,20 @@ personalized = personalisiert
 personalized.info     = Schauen Sie sich die Eintr\u00E4ge dieses Benutzers in einer personalisierten Sicht an.
 personalized.tag.info = Die folgenden Tags von {0} k\u00F6nnten Sie interessieren:
 
-persons.intro.dataset.desc = Die Datenbank der {0} Personen
-persons.intro.dataset.text = Die {0} Personen Datenbank beinhaltet Autoren und Herausgeber wissenschaftlicher Publikationen sowie deren Beziehungen untereinander. Unter anderem umfasst alle Deutschen Dissertationsschriften seit 1945. Das Ziel der Datenbank ist eine m\u00F6glichst umfangreiche Erfassung aller Betreuungs- und Gutachter-Relationen zwischen Personen und Publikation. Dabei sind wir auf Ihre Hilfe angewiesen: Helfen Sie mit und erfassen Sie fehlende Doktorv\u00E4ter, Doktorm\u00FCtter und andere Relationen!
-persons.intro.headline     = {0} Personen
-persons.intro.intro        = Suchen Sie eine Person \u00FCber deren Name oder den Titel ihrer Dissertation. Sie erhalten dann Informationen zur Person und deren Publikationen und k\u00F6nnen durch den akademischen Stammbaum navigieren.
-persons.intro.navi.dataset = Die Datenbank
-persons.intro.navi.wiskidz = Das Projekt
-persons.intro.title        = {0} Personen
-persons.intro.wiskidz.desc = Das Forschungsprojekt hinter den {0} Personen
-persons.intro.wiskidz.text = The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
+persons.intro.dataset.desc   = Autoren in der {0}-Folksonomie
+persons.intro.dataset.text   = Die {0} Autoren Datenbank erweitert das Sammeln und Teilen von Publikationsmethadaten in der {0}-Folksonomie um die M\u00F6glicheit der kollektiven und kollaborativen Pflege von Autor-Publikationslisten. Durch die Erfassung von Publikationsdaten sind Autoren zun\u00E4chst nur \u00FCber namentliche Erw\u00E4hnung bekannt. Die {0} Autoren Datenbank erm\u00F6glicht es auf einfache Weise Peronen mit gleichem Namen zu unterscheiden, Autoren mit Pseduonymen und Namens\u00E4nderungen zusammenzufassen und zus\u00E4tzliche Informationen wie ORCID-Profile der Autoren zu einzutragen. wie z.B. zu erfassen.
+persons.intro.genealogy.desc = Eine Datenbank der Doktorv\u00E4ter-, Doktorm\u00FCtter und anderer
+persons.intro.genealogy.text = Die Autoren-Datenbank der Autoren umfasst alle in der Deutschen Nationalbibliothek verzeichneten Deutschen Promotionsschriften. Das Ziel der {0} Datenbank ist eine m\u00F6glichst umfangreiche Erfassung aller Betreuungs- und Gutachter-Relationen zwischen Personen und Abschlussarbeiten. Dabei sind wir auf Ihre Hilfe angewiesen: Helfen Sie mit und erfassen Sie fehlende Promotionsschriften, Doktorv\u00E4ter, Doktorm\u00FCtter und andere Relationen!
+persons.intro.headline       = {0} Autoren
+persons.intro.intro          = Die Datenbank der {0} Autoren unterscheidet Autoren mit gleichem Namen in {0}. Sie enth\u00E4lt einen akademischer Stammbaum der Doktorv\u00E4ter und Doktorm\u00FCtter, aber auch der Gutachter, Betreuer, und sonstigen Beteiligten.
+persons.intro.navi.dataset   = {0} Autoren
+persons.intro.navi.genealogy = Akademischer Stammbaum
+persons.intro.navi.search    = Autorensuche
+persons.intro.navi.wiskidz   = Das Projekt
+persons.intro.search.desc    = Finden Sie Autoren \u00FCber deren Namen oder \u00FCber Publikationstitel und entdecken Sie ausgehend diesen den akademischen Stammbaum.
+persons.intro.title          = {0} Personen
+persons.intro.wiskidz.desc   = Das Forschungsprojekt zur Datenbank der {0} Autoren
+persons.intro.wiskidz.text   = TODO: \u00FCbersetzen: The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
 
 plain = einfach
 
