cleanup and fixes of various messages

--- a/bibsonomy-webapp/src/main/resources/old_layout_messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/old_layout_messages_de.properties
@@ -5,3 +5,4 @@ group.manage.unsupported = Leider wird das Administrieren einer Gruppe nicht meh
 
 join.group.unsupported = Leider wird das Beitreten zu einer Gruppe nicht mehr im alten Layout unterst\u00FCtzt. Bitte wechseln Sie zum <a href="/bibsonomy3">neuen Layout</a>.
 batchedit.unsupported = Das Editieren von mehreren Einträgen zugleich wird nicht mehr im alten Layout unterst\u00FCtzt. Bitte wechseln Sie zum <a href="/bibsonomy3">neuen Layout</a>.
+post.resource.discussion.anonymous.help                 = ob Sie anonym oder unter Ihrem Benutzernamen schreiben wollen und
