--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -667,7 +667,7 @@ export.bibtex.record  = BibTeX-Eintrag
 export.bibtex.title   = als BibTeX exportieren
 export.burst.faq      = Ein g\u00FCltiger <a href="http://en.wikipedia.org/wiki/RSS">RSS</a> Feed entsprechend der <a href="http://en.wikipedia.org/wiki/RDF">RDF</a>-Spezifikation. Sie k\u00F6nnen diesen mit einem geeigneten RSS-Programm einlesen. Die Ausgabe vereint RSS und SWRC.
 export.csl.caption    = CSL Eingabeformat (JSON)
-export.csl.faq        = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="">CiteProc Implementationen</a> kompatibel.
+export.csl.faq        = Die <a href="http://citationstyles.org/">Citation Style Language</a> (CSL) ist eine offene, auf XML basierende Sprache, um bibliografische Angaben und Zitationen zu formatieren. Dieser JSON Export ist mit den meisten <a href="http://citationstyles.org/developers/">CiteProc Implementationen</a> kompatibel.
 export.custom.faq     = Ein benutzerspezifisches <a href="http://jabref.sourceforge.net/">JabRef</a>-Layout, das auf der Seite <a href="/settings?selTab=2#layout">Einstellungen</a> hochgeladen werden kann. Informationen zum Schreiben eines solchen Layout-Filters finden Sie <a href="http://jabref.sourceforge.net/help/CustomExports.php">hier</a>.
 export.endnote.record = Endnote-Eintrag
 export.format         = Format
