fixed firstname lastname order for editors

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1421,7 +1421,7 @@ post.resource.editPublication                           = edit your publication 
 post.resource.edition                                   = edition
 post.resource.edition.help                              = edition of a book, usually written in full as "Second"
 post.resource.editor                                    = editor(s)
-post.resource.editor.help                               = Each editor on a separate line, format "Firstname Lastname". Only necessary, if no author is given.
+post.resource.editor.help                               = Each editor on a separate line, format "Lastname, Firstname". Only necessary, if no author is given.
 post.resource.entrytype                                 = entry type
 post.resource.entrytype.article.description             = An article from a scientific journal
 post.resource.entrytype.book                            = 
